# Abejaruco

./: .gitignore  .iStylerc  .verilog-format.properties  CMakeLists.txt  README.md  cache_test  prueba
benchmarks/: CMakeLists.txt  buffer_sum.ref.s  buffer_sum.s  matrix_mul.ref.s  matrix_mul.s  mem_copy.ref.s  mem_copy.s
cmake/: AddVerilogSource.cmake  Dependencies.cmake
cmake/Dependencies/iverilog/: iverilog.cmake
cmake/Dependencies/verilator/: verilator.cmake
cmake/Modules/: AddModule.cmake
docs/: Contributing.md
programs/: alu_ops.s  branch.s  buffer_sum.s  dcache_ops.s  hazards.s  icache_ops.s  jump.s  lb_lw_lh.s  load_add.s  mem_copy.s
rtl/: CMakeLists.txt
scripts/code_format/: check_format.sh
sim/cpp/: CMakeLists.txt  and_tb.cpp
sim/tests/: CMakeLists.txt  and_gate.sby
sim/verilog/: CMakeLists.txt  and_gate_tb.v
src/: CMakeLists.txt  abejaruco.v  parameters.v  stall_unit.v
src/common/: CMakeLists.txt  adder.v  and.tb.v  and.v  base_multiplier.v  complement2.v  complement2_32bit.v  demux1to2.v  demux1to2_32bit.v  flipFlop.v  flipFlop_32bit.v  flip_flop.v  full_adder.v  half_adder.v  multiplier.v  mux2to1.v  mux2to1_32bit.v  priority_encoder.v  sign_extend.v  tag_comparator.v
src/common/cache/: cache.v  ram.v  tag_comparator.v
src/decode/: CMakeLists.txt  control_unit.v  decode_registers.v  hazard_detection_unit.v  hazzard_dect_unit.v  register_file.v  stall_unit.v
src/execution/: CMakeLists.txt  alu.v  alu_control.v  calculate_partial_product.v  execution_registers.v  mul_registers.v  multiplier.v  reduce_partial_products.v  sum_partial_products.v
src/fetch/: CMakeLists.txt  fetch_registers.v
src/memory/: CMakeLists.txt  cache.v  d_cache.v  i_cache.v  memory.v  memory_arbiter.v  memory_registers.v
tests/: CMakeLists.txt  abejaruco.tb  abejaruco.tb.v
tests/common/: CMakeLists.txt  adder.tb.out  adder.tb.v  base_multiplier.tb.v  cache.tb.v  complement2.tb.v  complement2_32bit.tb.v  demux1to2.tb.v  demux1to2_32bit.tb.v  flipFlop.tb.v  flipFlop_32bit.tb.v  flip_flop.tb.v  full_adder.tb.v  half_adder.tb.v  multiplier.tb.out  multiplier.tb.v  mux2to1.tb.v  mux2to1_32bit.tb.v
tests/decode/: CMakeLists.txt  control_unit.tb.v
tests/execution/: CMakeLists.txt  alu.tb.v  alu_control.tb.v  multiplier.tb.v
tests/memory/: CMakeLists.txt  cache.tb.v  memory.tb.v
tests/program_tests/: CMakeLists.txt  alu_ops.tb.v  branch.tb.v  buffer_sum.tb.v  dcache_acceses.tb.v  hazards.tb.v  jump.tb.v  load_add.tb.v  mem_copy.tb.v
tests/utils/: CMakeLists.txt  display.v  tb_utils.v
